fix: Enlarge audio source and duration icons (CSS fix) and increase spacing in Transcribe icon (v51)

--- a/static/style.css
+++ b/static/style.css
@@ -1175,8 +1175,8 @@ svg {
 
 /* Small icons */
 .icon-small {
-    width: 16px;
-    height: 16px;
+    width: 36px;
+    height: 36px;
 }
 
 /* Icon labels in switches */
